修改cargo.toml文件内容

--- a/hello_world/Cargo.toml
+++ b/hello_world/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hello_world"
 version = "0.1.0"
-authors = ["mccsy <mike12138@qq.com>"]
+authors = ["mikenut <mikerust@qq.com>"]
 
 [dependencies]
 
