--- a/dining_philosohpers/Cargo.toml
+++ b/dining_philosohpers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dining_philosohpers"
 version = "0.1.0"
-authors = ["mccsy <mike12138@qq.com>"]
+authors = ["mikenut <mikerust@qq.com>"]
 
 [dependencies]
